troubleshooting a state update issue on mobile

--- a/src/pages/CheatSheets/Css/Flexbox/Gap/FlexboxGraphGap.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/Gap/FlexboxGraphGap.styles.css
@@ -10,5 +10,5 @@
 }
 
 .ghost {
-  display: none;
+  opacity: 0;
 }
